# pdfmm

./: .gitignore  .gitmodules  AUTHORS  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  CODING-STYLE.md  CODINGSTYLE.txt  ChangeLog  Doxyfile  README.html  README.md  SOURCE-LAYOUT.md  TODO.md  pdfmm_config.h.in  podofo_config.h.in
examples/gentest/: CMakeLists.txt  custom_painter.cpp  custom_painter.h  gentest.cpp
examples/helloworld/: CMakeLists.txt  helloworld.cpp
examples/helloworld-base14/: CMakeLists.txt  helloworld-base14.cpp
sandbox/: CMakeLists.txt  README.md  bootstrap-linux.sh  bootstrap-macos.sh
src/pdfmm/: CMakeLists-old.txt  CMakeLists.txt  libpdfmm.pc.in  pdfmm-base.h  pdfmm-contrib.h  pdfmm-extra.h  pdfmm.h  pdfmm.rc  pdfmm_config.h.in
src/pdfmm/base/: Pdf3rdPtyForwardDecl.h  PdfAcroForm.cpp  PdfAcroForm.h  PdfAction.cpp  PdfAction.h  PdfAnnotation.cpp  PdfAnnotation.h  PdfAnnotationActionBase.cpp  PdfAnnotationActionBase.h  PdfAnnotationCollection.cpp  PdfAnnotationCollection.h  PdfAnnotationWidget.cpp  PdfAnnotationWidget.h  PdfAnnotation_Types.cpp  PdfAnnotation_Types.h  PdfArray.cpp  PdfArray.h  PdfButton.cpp  PdfButton.h  PdfCIDToGIDMap.cpp  PdfCIDToGIDMap.h  PdfCMapEncoding.cpp  PdfCMapEncoding.h  PdfCanvas.cpp  PdfCanvas.h  PdfCanvasInputDevice.cpp  PdfCanvasInputDevice.h  PdfCatalog.cpp  PdfCatalog.h  PdfCharCodeMap.cpp  PdfCharCodeMap.h  PdfCheckBox.cpp  PdfCheckBox.h  PdfChoiceField.cpp  PdfChoiceField.h  PdfColor.cpp  PdfColor.h  PdfComboBox.cpp  PdfComboBox.h  PdfCommon.cpp  (+265 more)
src/pdfmm/common/: Format.h  istringviewstream.h  nullable.h  refplaceholder.h  span.h  types.h
src/pdfmm/compat/: format  format.hpp  nullable.h  span
src/pdfmm/contrib/: PdfFunction.cpp  PdfFunction.h  PdfShadingPattern.cpp  PdfShadingPattern.h  PdfTilingPattern.cpp  PdfTilingPattern.h
src/pdfmm/extra/: PdfFunction.cpp  PdfFunction.h  PdfShadingPattern.cpp  PdfTilingPattern.cpp  PdfTilingPattern.h
src/pdfmm/private/: CMakeLists.txt  Format.h  FreetypePrivate.cpp  FreetypePrivate.h  ImageUtils.cpp  ImageUtils.h  JpegCommon.cpp  JpegCommon.h  OperatorUtils.cpp  OperatorUtils.h  PdfCompilerCompat.h  PdfDeclarationsPrivate.cpp  PdfDeclarationsPrivate.h  PdfDefines.cpp  PdfDefinesPrivate.h  PdfEncodingPrivate.cpp  PdfEncodingPrivate.h  PdfFiltersPrivate.cpp  PdfFiltersPrivate.h  PdfStandard14FontData.cpp  PdfStandard14FontData.h  PdfStandard14FontFiles.cpp  PdfStandard14FontsData.cpp  PdfStandard14FontsData.h  XMPUtils.cpp  XMPUtils.h  XmlUtils.cpp  XmlUtils.h  charconv_compat.cpp  charconv_compat.h  format_compat.h  utfcpp_extensions.h
src/podofo/: CMakeLists.txt  podofo-base.h  podofo-extra.h  podofo.h
src/podofo/base/: PdfAcroForm.cpp  PdfAcroForm.h  PdfAction.cpp  PdfAction.h  PdfAnnotation.cpp  PdfAnnotation.h  PdfArray.cpp  PdfArray.h  PdfButton.cpp  PdfCMapEncoding.cpp  PdfCMapEncoding.h  PdfCanvas.cpp  PdfCanvas.h  PdfCanvasInputDevice.cpp  PdfCanvasInputDevice.h  PdfCharCodeMap.cpp  PdfCharCodeMap.h  PdfCheckBox.cpp  PdfCheckBox.h  PdfChoiceField.cpp  PdfColor.cpp  PdfColor.h  PdfComboBox.cpp  PdfComboBox.h  PdfCompilerCompat.h  PdfCompilerCompatPrivate.h  PdfContainerDataType.cpp  PdfContainerDataType.h  PdfContents.cpp  PdfContents.h  PdfContentsTokenizer.cpp  PdfContentsTokenizer.h  PdfData.cpp  PdfData.h  PdfDataType.cpp  PdfDataType.h  PdfDate.cpp  PdfDate.h  PdfDefines.h  PdfDefinesPrivate.cpp  (+175 more)
src/podofo/compat/: EnumFlags.h  optional  span
src/podofo/doc/: PdfAcroForm.cpp  PdfAcroForm.h  PdfAction.cpp  PdfAction.h  PdfAnnotation.cpp  PdfAnnotation.h  PdfButton.cpp  PdfButton.h  PdfCMapEncoding.cpp  PdfCMapEncoding.h  PdfCheckBox.cpp  PdfCheckBox.h  PdfChoiceField.cpp  PdfChoiceField.h  PdfComboBox.cpp  PdfComboBox.h  PdfContents.cpp  PdfContents.h  PdfDestination.cpp  PdfDestination.h  PdfDifferenceEncoding.cpp  PdfDifferenceEncoding.h  PdfDocument.cpp  PdfDocument.h  PdfElement.cpp  PdfElement.h  PdfEncodingObjectFactory.cpp  PdfEncodingObjectFactory.h  PdfExtGState.cpp  PdfExtGState.h  PdfField.cpp  PdfField.h  PdfFileSpec.cpp  PdfFileSpec.h  PdfFont.cpp  PdfFont.h  PdfFontCID.cpp  PdfFontCID.h  PdfFontCIDTrueType.cpp  PdfFontCIDTrueType.h  (+79 more)
src/podofo/extra/: PdfFunction.cpp  PdfFunction.h  PdfShadingPattern.cpp  PdfShadingPattern.h  PdfTilingPattern.cpp  PdfTilingPattern.h
src/podofo/private/: PdfDeclarationsPrivate.cpp  PdfDefines.cpp  PdfDefinesPrivate.h  PdfFiltersPrivate.cpp  PdfFiltersPrivate.h  PdfStandard14FontsData.cpp  (+1 more)
test/: CMakeLists.txt  PdfTestConfig.h.in
test/ContentParser/: CMakeLists.txt
test/CreationTest/: CMakeLists.txt  CreationTest.cpp
test/FilterTest/: FilterTest.cpp
test/FormTest/: CMakeLists.txt  FormTest.cpp
test/LargeTest/: CMakeLists.txt
test/SignTest/: CMakeLists.txt
test/SignatureTest/: CMakeLists.txt  SignTest.cpp
test/TokenizerTest/: CMakeLists.txt
test/VariantTest/: VariantTest.cpp
test/WatermarkTest/: WatermarkTest.cpp
test/common/: CMakeLists.txt  PdfTest.cpp  PdfTest.h
test/unit/: BasicTest.cpp  BasicTypeTest.cpp  BasicTypeTest.h  CMakeLists.txt  ColorTest.cpp  ColorTest.h  DateTest.cpp  DateTest.h  DeviceTest.cpp  DeviceTest.h  ElementTest.cpp  ElementTest.h  EncodingTest.cpp  EncodingTest.h  EncryptTest.cpp  EncryptTest.h  FilterTest.cpp  FilterTest.h  FontTest.cpp  FontTest.h  ImageTest.cpp  NameTest.cpp  NameTest.h  PageTest.cpp  PageTest.h  PageTreeTest.cpp  PagesTreeTest.cpp  PagesTreeTest.h  PainterTest.cpp  PainterTest.h  ParserTest.cpp  ParserTest.h  StringTest.cpp  StringTest.h  TestConfig.h.in  TestExtension.h  TestImage.cpp  TestUtils.cpp  TestUtils.h  TextExtraction.cpp  (+6 more)
tools/: CMakeLists.txt
tools/include/: podofo_config.h
tools/podofobox/: boxsetter.cpp  boxsetter.h  podofobox.cpp
tools/podofocolor/: CMakeLists.txt  colorchanger.cpp  colorspace.cpp
tools/podofoencrypt/: podofoencrypt.cpp
tools/podofoimpose/: CMakeLists.txt  pdftranslator.cpp
tools/podofopdfinfo/: CMakeLists.txt  pdfinfo.cpp
tools/podofosign/: CMakeLists.txt  podofosign.cpp
tools/podofotxtextract/: CMakeLists.txt  podofotxtextract.cpp
tools/podofouncompress/: CMakeLists.txt
(+17 files in other folders)
