# REMOVE-ME: When and if pdfmm is merged back into PoDoFo
set(PODOFO_LIBRARIES ${PDFMM_LIBRARIES})
include_directories("${CMAKE_CURRENT_SOURCE_DIR}/include")

add_subdirectory(podofobox)
#add_subdirectory(podofocolor)
#add_subdirectory(podofocountpages)
#add_subdirectory(podofocrop)
#add_subdirectory(podofoencrypt)
#add_subdirectory(podofogc)
#add_subdirectory(podofoimgextract)
#add_subdirectory(podofoimg2pdf)
#add_subdirectory(podofomerge)
#add_subdirectory(podofopages)
#add_subdirectory(podofopdfinfo)
#add_subdirectory(podofotxt2pdf)
#add_subdirectory(podofotxtextract)
#add_subdirectory(podofouncompress)
#add_subdirectory(podofoimpose)
#add_subdirectory(podofoincrementalupdates)
#add_subdirectory(podofoxmp)
#add_subdirectory(podofonooc)
#add_subdirectory(podofosign)
